# Menghindar_Diri

./: .gitignore  CMakeLists.txt  Menghindar Diri.VC.opendb  Menghindar Diri.sln  Project3D.vcxproj
Debug/Project3D.tlog/: CL.write.1.tlog
Project3D/: Character.cpp  Character.h  CollisionBox.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  HighScoreMenuItem.cpp  HighScoreMenuItem.h  Menu.cpp  Menu.h  MenuItem.h  ModelObject.cpp  ModelObject.h  Model_OBJ.cpp  Model_OBJ.h  Object.cpp  Object.h  Player.cpp  Player.h  Project3D.vcxproj  Project3D.vcxproj.filters  SOIL.h  SettingsMenuItem.cpp  SettingsMenuItem.h  ShapeCalculator.h  Skybox.cpp  Skybox.h  SoundPlayer.cpp  SoundPlayer.h  StaticOpenGLFunctions.h  StaticSettings.h  enemy.h  highscores.txt  logic.cpp  logic.h  main.cpp  main2.cpp  stb_image.h
Project3D/Controls/: GameController.cpp  GameController.h
Project3D/Controls/keyboard/: KeyboardController.cpp  KeyboardController.h
Project3D/Controls/wiimote/: WiiMoteController.cpp  WiiMoteController.h  wiimote.h
Project3D/Debug/: vc140.idb
Project3D/Debug/Menghindar Diri.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Menghindar Diri.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project3D/Debug/Project3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  Project3D.lastbuildstate  link.command.1.tlog
Project3D/Models/: airplane.mtl
Project3D/Models/lowPolyAirplane/: lowPolyAirplane.blend  lowPolyAirplane.mtl
Project3D/Objects/: CustomScan.h  ObjModel.cpp  ObjModel.h
Project3D/Objects/Collision/: CollisionBox.cpp  CollisionBox.h
Project3D/Objects/node/: Node.cpp  Node.h
Project3D/highscore/: Highscore.cpp  Highscore.h
Project3D/x64/Debug/: game.obj.enc  logic.nativecodeanalysis.xml  logic.obj.enc  main.nativecodeanalysis.xml  model_obj.nativecodeanalysis.xml  modelobject.nativecodeanalysis.xml  objmodel.nativecodeanalysis.xml  soundplayer.obj.enc  vc.nativecodeanalysis.all.xml  vc140.idb  wiimote.nativecodeanalysis.xml  wiimotecontroller.nativecodeanalysis.xml
Project3D/x64/Debug/Menghindar Diri.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Menghindar Diri.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project3D/x64/Release/Menghindar Diri.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Menghindar Diri.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: Menghindar Diri.ilk
x64/Release/: Menghindar Diri.iobj
